--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ img {
 .main {
   display: none;
 }
+.allign-fix{
+  padding: 25px;
+}
 
 @media (max-width: 767px) {
   .justify-content-around.align-items-center.mt-3.gallery-header.mb-2 {
