--- a/style.css
+++ b/style.css
@@ -50,7 +50,14 @@ img {
   cursor: pointer;
   margin: 0 3px;
 }
-
+.container{
+  margin-top: 30px;
+  background-color: #cdd2db94;
+  border-radius: 10px;
+}
+.custom-design{
+  box-shadow: 10px 10px 13px #808080c9;
+}
 .main {
   display: none;
 }
