--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
 
 .slider-item {
   display: none;
+  animation-name: fade;
+  animation-duration: 0.3s;
+}
+@keyframes fade {
+  from {opacity: 0.1} 
+  to {opacity: 1}
 }
 
 .img-thumbnail {
